--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,6 @@
     "trailingComma": "all",
     "tabWidth": 4,
     "semi": true,
-    "jsxSingleQuote": true
+    "jsxSingleQuote": true,
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
