--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "sonner": "1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
