--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "backend": "json-server --watch ./db/db.json --port 8000"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "http-status-codes": "2.3.0",
+    "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
