--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "http-status-codes": "2.3.0",
-    "json-server": "^1.0.0-beta.1",
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
